chore: fixed gaps and spacing between content following feedback

--- a/course-v3/assets/css/course-resources.scss
+++ b/course-v3/assets/css/course-resources.scss
@@ -2,22 +2,41 @@ h4 {
   color: $highlight-red !important;
 }
 
-.resource-list {
-  margin-bottom: 24px;
+.download-page-content {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
 
-  &:last-child {
-    margin-bottom: 0;
-  }
+.download-resource-lists {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  width: 100%;
+}
+
+.download-page-title {
+  font-size: 16px !important;
+  font-weight: 500;
+  line-height: 1.5;
+  margin: 0;
+}
+
+.resource-list {
+  margin-bottom: 0;
 }
 
 .download-course-container {
-  border-radius: 3px;
+  background-color: #f3f4f8; // light-gray-1
+  border: 1px solid #dde1e6; // light-gray-2
+  border-radius: 4px;
+  padding: 24px;
 
   .download-course-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 12px;
+    gap: 16px;
   }
 
   .download-course-button-wrap {
@@ -27,9 +46,17 @@ h4 {
 
   .download-course-text {
     font-size: 14px;
-    line-height: 1.5;
+    line-height: 22px;
+    color: $black;
+    width: 100%;
 
     ol {
+      margin-top: 16px;
+      margin-bottom: 0;
+      padding-left: 1.25rem;
+    }
+
+    li {
       margin-bottom: 0;
     }
   }
@@ -37,23 +64,30 @@ h4 {
   .download-course-button {
     display: inline-flex;
     align-items: center;
-    height: fit-content;
-    padding: 0.75rem 1.5rem 0.75rem 1.25rem;
-    gap: 0.5rem;
-    border-radius: 0.25rem;
+    height: 48px;
+    padding: 12px 24px 12px 24px;
+    gap: 8px;
+    border-radius: 4px;
     background-color: $mit-red-dark;
     color: $white;
     text-decoration: none;
     font-family: $mit-learn-font-family;
-    font-size: 0.875rem;
+    font-size: 16px;
     font-weight: 500;
-    line-height: 1.15;
+    line-height: 16px;
     box-shadow: 0px 2px 4px 0px rgba(37, 38, 43, 0.1),
       0px 3px 8px 0px rgba(37, 38, 43, 0.12);
     transition: background-color 0.2s ease;
 
+    .material-icons {
+      font-size: 24px;
+      line-height: 1;
+    }
+
     &:hover {
       background-color: $highlight-red;
+      color: $white;
+      text-decoration: none;
     }
 
     &:active {
